Changed Footer and some css hover and made it responsive

--- a/public/AppData.json
+++ b/public/AppData.json
@@ -1,7 +1,7 @@
 [
   {
     "id": 1,
-    "image": "https://i.ibb.co/QjBLPzM/app1.png",
+    "image": "https://i.ibb.co.com/46G50Wm/download.png",
     "title": "📸 PhotoSnap - Professional Photo Editor",
     "companyName": "Pixel Labs",
     "description": "PhotoSnap is a next-generation AI-powered photo editor that helps you transform ordinary pictures into extraordinary creations. With its advanced filters, lighting correction tools, and background remover, it’s designed for both beginners and professionals. Whether you’re editing selfies, portraits, or travel photos, PhotoSnap gives you full creative control. You can add overlays, stickers, custom text, and artistic effects within seconds. The app also includes an integrated collage maker, cloud storage, and one-tap social media sharing. Our latest update introduces real-time beauty retouch, sky replacement, and AI-based auto-enhance for perfect photos every time. PhotoSnap also supports RAW image editing, batch processing, and HD export up to 8K resolution, making it one of the most powerful mobile editors available today.",
@@ -19,7 +19,7 @@
   },
   {
     "id": 2,
-    "image": "https://i.ibb.co/0Jm6zkL/app2.png",
+    "image": "https://i.ibb.co.com/TByRnWpm/images.png",
     "title": "✅ TaskMaster - Smart Task Organizer",
     "companyName": "WorkFlow Inc.",
     "description": "TaskMaster is your ultimate productivity partner that brings order to your daily life. From managing personal goals to leading a professional project team, it adapts to your workflow. You can create smart lists, recurring reminders, sub-tasks, and collaborative boards. The built-in focus timer and progress tracker help you stay consistent and beat procrastination. TaskMaster integrates with Google Calendar, Slack, and Microsoft Teams for seamless scheduling. Its AI assistant gives smart suggestions on when to work, rest, or review tasks. You can also attach files, voice notes, and links for quick access. Whether you’re a student planning your studies or a business owner managing deadlines, TaskMaster ensures everything is perfectly organized and easy to track from any device.",
@@ -37,7 +37,7 @@
   },
   {
     "id": 3,
-    "image": "https://i.ibb.co/ZG3QKjy/app3.png",
+    "image": "https://i.ibb.co.com/wF64W76y/download.png",
     "title": "💪 FitZone - AI Fitness & Workout Coach",
     "companyName": "ActiveBody Ltd.",
     "description": "FitZone is a personalized AI-powered fitness companion that designs a workout and diet plan tailored specifically for you. It offers over 500+ guided exercises, home and gym training plans, and smart tracking for calories and body metrics. You can also access live training videos, meditation sessions, and yoga tutorials for mental wellness. FitZone automatically adjusts your plan based on your performance, fatigue level, and body type. The built-in social challenge mode lets you compete with friends and stay motivated. The latest version includes smartwatch integration, water reminders, and health analytics powered by AI insights. Whether you want to lose weight, build muscle, or improve stamina — FitZone helps you achieve it naturally with consistency and fun.",
@@ -55,7 +55,7 @@
   },
   {
     "id": 4,
-    "image": "https://i.ibb.co/hRrz8L6/app4.png",
+    "image": "https://i.ibb.co.com/7xgZjxWj/download-1.png",
     "title": "🛒 ShopSmart - Save More on Every Purchase",
     "companyName": "Ecomify",
     "description": "ShopSmart revolutionizes your online shopping experience by helping you compare prices across major platforms instantly. It automatically finds coupons, cashback offers, and exclusive discounts before you checkout. The app tracks price drops and alerts you when your favorite products are on sale. You can browse millions of products from Amazon, eBay, AliExpress, and local stores all in one place. The in-built review analyzer helps you identify fake ratings and pick trusted sellers. ShopSmart also supports voice search, wishlist sync, and AI-based deal prediction. With secure payment tracking, order history, and refund assistance, ShopSmart ensures you always shop smarter and safer. Save big every time you buy online!",
@@ -73,7 +73,7 @@
   },
   {
     "id": 5,
-    "image": "https://i.ibb.co/0yRFwZ7/app5.png",
+    "image": "https://i.ibb.co.com/TqxQ2fLv/download-4.png",
     "title": "🎵 MusicWave - Stream & Download Songs",
     "companyName": "Soundly Studio",
     "description": "MusicWave lets you dive into a world of music with millions of tracks available for streaming and offline playback. Discover trending hits, explore emerging artists, and customize playlists for every mood. With its powerful recommendation engine, you’ll always find songs that match your taste. The app supports high-quality audio up to 320kbps, lyrics sync, and sleep timer. You can also download tracks for offline listening without ads. MusicWave comes with an equalizer, sound booster, and real-time visualizer to enhance your music journey. Plus, it features exclusive artist interviews, podcasts, and live concerts so you can connect with your favorite musicians like never before. Experience music without boundaries — wherever you go.",
@@ -91,7 +91,7 @@
   },
   {
     "id": 6,
-    "image": "https://i.ibb.co/7bY3V7C/app6.png",
+    "image": "https://i.ibb.co.com/Pz6SSqRC/download-2.jpg",
     "title": "🧘 ZenSpace - Mindfulness & Meditation",
     "companyName": "CalmTech",
     "description": "ZenSpace offers guided meditation sessions, breathing exercises, sleep stories, and mood tracking to help you achieve mental clarity and relaxation. With daily mindfulness reminders and personalized meditation plans, ZenSpace is your companion in reducing stress and enhancing focus. The app also features a sleep tracker and calming soundscapes to improve your sleep quality.",
@@ -109,7 +109,7 @@
   },
   {
     "id": 7,
-    "image": "https://i.ibb.co/8bX8R3F/app7.png",
+    "image": "https://i.ibb.co.com/v4Yp948D/download-5.png",
     "title": "📚 StudyBuddy - Student Planner",
     "companyName": "EduTech",
     "description": "StudyBuddy helps students organize their study schedules, track assignments, and set reminders for exams. With a built-in calendar, task prioritization, and progress tracking, it ensures you stay on top of your academic responsibilities. The app also offers group study features and collaborative note-sharing to enhance learning.",
@@ -127,7 +127,7 @@
   },
   {
     "id": 8,
-    "image": "https://i.ibb.co/1Lq3F0P/app8.png",
+    "image": "https://i.ibb.co.com/sp4CMh5H/download-6.png",
     "title": "🎮 GameHub - Mobile Gaming Platform",
     "companyName": "PlayTech",
     "description": "GameHub is a mobile gaming platform that offers a wide range of games across various genres. With features like multiplayer support, leaderboards, and in-game achievements, it provides an engaging gaming experience. The app also includes game recommendations based on your preferences and gaming history.",
@@ -145,7 +145,7 @@
   },
   {
     "id": 9,
-    "image": "https://i.ibb.co/7V8Wz0T/app9.png",
+    "image": "https://i.ibb.co.com/SDt4JWtC/download-7.png",
     "title": "📦 PackMate - Delivery Tracker",
     "companyName": "LogiTech",
     "description": "PackMate allows you to track your deliveries in real-time, providing updates on shipment status, estimated delivery times, and notifications for any delays. With support for multiple courier services, it ensures you never miss a package again. The app also offers package scanning and history tracking for easy reference.",
@@ -163,7 +163,7 @@
   },
   {
     "id": 10,
-    "image": "https://i.ibb.co/6n2X5Yw/app10.png",
+    "image": "https://i.ibb.co.com/23x2MN6n/download-8.png",
     "title": "🛠️ FixIt - DIY Repair Guide",
     "companyName": "HandyTools",
     "description": "FixIt provides step-by-step DIY repair tutorials for electronics, home appliances, and furniture. With images, videos, and expert tips, users can save money while learning practical repair skills. The app also includes a tool inventory checklist and troubleshooting tips for common issues.",
@@ -181,7 +181,7 @@
   },
   {
     "id": 11,
-    "image": "https://i.ibb.co/NKQJmR6/app11.png",
+    "image": "https://i.ibb.co.com/60DTgfSh/download-9.png",
     "title": "🍳 CookMate - Recipe & Meal Planner",
     "companyName": "Foodies Inc.",
     "description": "CookMate provides thousands of recipes with step-by-step instructions, video tutorials, and nutritional information. Plan your weekly meals, create shopping lists, and explore healthy options. The app also allows saving favorite recipes and sharing them with friends. AI suggestions help you discover new dishes based on your taste preferences.",
@@ -199,7 +199,7 @@
   },
   {
     "id": 12,
-    "image": "https://i.ibb.co/k0m6bK9/app12.png",
+    "image": "https://i.ibb.co.com/zVJb5KtF/download-4.jpg",
     "title": "🖌️ DrawPad - Sketch & Paint",
     "companyName": "CreativeTools",
     "description": "DrawPad is a versatile sketching and painting app for artists of all levels. It offers brushes, pencils, markers, layers, blending modes, and customizable color palettes. Users can create digital artwork, doodle, or edit images. Export in PNG, JPG, and PSD formats. AI-assisted drawing features help with shapes, symmetry, and perspective.",
@@ -217,7 +217,7 @@
   },
   {
     "id": 13,
-    "image": "https://i.ibb.co/1zdHn2r/app13.png",
+    "image": "https://i.ibb.co.com/NdscjmjG/download-10.png",
     "title": "📝 NoteKeeper - Smart Notes & To-Do",
     "companyName": "NoteTech",
     "description": "NoteKeeper lets you capture ideas, create checklists, and organize notes with tags and folders. Voice notes, reminders, and cloud sync across devices ensure you never lose an important thought. AI-powered search helps you find notes instantly, and collaborative features allow sharing with colleagues and friends.",
@@ -235,7 +235,7 @@
   },
   {
     "id": 14,
-    "image": "https://i.ibb.co/DfKg7nV/app14.png",
+    "image": "https://i.ibb.co.com/RGzFyn0N/download-5.jpg",
     "title": "🏃 MoveFit - Activity & Step Tracker",
     "companyName": "ActiveLife",
     "description": "MoveFit tracks your daily activity, steps, calories burned, and distance covered. Set fitness goals, get AI-driven activity suggestions, and connect with friends for challenges. Compatible with smartwatches and wearable devices, the app motivates you to stay active and maintain a healthy lifestyle with personalized insights.",
@@ -253,7 +253,7 @@
   },
   {
     "id": 15,
-    "image": "https://i.ibb.co/vB7ytgJ/app15.png",
+    "image": "https://i.ibb.co.com/v6f9TNxq/download-6.jpg",
     "title": "🌍 TravelMate - Trip Planner & Guide",
     "companyName": "TravelTech",
     "description": "TravelMate helps plan trips, book hotels, flights, and experiences. Get detailed itineraries, local guides, offline maps, and AI recommendations for attractions, restaurants, and activities. Track expenses, weather, and bookings in one place. Perfect for solo travelers, families, and adventure seekers.",
@@ -271,7 +271,7 @@
   },
   {
     "id": 16,
-    "image": "https://i.ibb.co/dP3q6x8/app16.png",
+    "image": "https://i.ibb.co.com/MDkRbcDp/download-7.jpg",
     "title": "💼 BizManager - Business Organizer",
     "companyName": "ProBiz Solutions",
     "description": "BizManager helps small business owners organize projects, clients, and finances. Features include task management, invoicing, client tracking, and team collaboration. AI insights provide productivity tips and financial summaries. Sync across devices ensures all team members stay updated in real time.",
@@ -289,7 +289,7 @@
   },
   {
     "id": 17,
-    "image": "https://i.ibb.co/3W4vFyf/app17.png",
+    "image": "https://i.ibb.co.com/vxWrTZyb/download-8.jpg",
     "title": "🎯 FocusTime - Productivity Timer",
     "companyName": "WorkSmart",
     "description": "FocusTime is a productivity app that uses Pomodoro technique and AI analytics to help you stay focused. Track sessions, set goals, and visualize productivity trends. Alerts and reminders ensure you minimize distractions. Collaborative features allow team task tracking and performance monitoring.",
@@ -307,7 +307,7 @@
   },
   {
     "id": 18,
-    "image": "https://i.ibb.co/2sZ9rFp/app18.png",
+    "image": "https://i.ibb.co.com/chKCTXwP/images.jpg",
     "title": "📸 InstaPic - Social Photo Sharing",
     "companyName": "SnapWorld",
     "description": "InstaPic lets users share photos and videos with friends, follow trending content, and interact through likes, comments, and stories. The app includes photo filters, stickers, and AI suggestions for hashtags. Explore new content with personalized feeds and trending challenges.",
@@ -325,7 +325,7 @@
   },
   {
     "id": 19,
-    "image": "https://i.ibb.co/xmZ5z1t/app19.png",
+    "image": "https://i.ibb.co.com/xtF1hVgH/download-11.png",
     "title": "💡 IdeaBox - Brainstorm & Creativity",
     "companyName": "Innovate Labs",
     "description": "IdeaBox helps users capture creative ideas, organize thoughts, and collaborate with teams. Features include mind maps, voice notes, tagging, and AI suggestions. Share ideas instantly and track progress on projects. Ideal for students, entrepreneurs, and creatives.",
@@ -343,7 +343,7 @@
   },
   {
     "id": 20,
-    "image": "https://i.ibb.co/5tQYg5T/app20.png",
+    "image": "https://i.ibb.co.com/mVxFQFrb/download-13.png",
     "title": "🎶 SoundPulse - Music Player & Equalizer",
     "companyName": "AudioWave",
     "description": "SoundPulse is a music player with equalizer, playlists, offline playback, and visualizer. Customize audio settings, discover new tracks, and enjoy a seamless listening experience. Share songs with friends and explore curated playlists for different moods.",
